// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Repo/Header Long Name smoke-test 1`] = `
<div class="border-b border-accent-content bg-base-300">
  <div class="mx-auto lg:container">
    <a href="/repo/9ee507fc4357d7ee16a5d8901bedcd103f23c17d"
       class="strong btn btn-ghost mb-0 mt-0 break-words px-3 text-sm"
    >
      Long Name that goes on and on and on and on a...
    </a>
    <div class="flex border-b border-base-400">
      <div role="tablist"
           class="tabs tabs-bordered flex-none"
      >
        <a href="/repo/9ee507fc4357d7ee16a5d8901bedcd103f23c17d"
           class="tab tab-active"
        >
          About
        </a>
        <a href="/repo/9ee507fc4357d7ee16a5d8901bedcd103f23c17d/proposals"
           class="tab"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 16 16"
               class="mb-1 mr-1 h-4 w-4 flex-none fill-base-content pt-1 opacity-50"
          >
            <path d="M1.5 3.25a2.25 2.25 0 1 1 3 2.122v5.256a2.251 2.251 0 1 1-1.5 0V5.372A2.25 2.25 0 0 1 1.5 3.25m5.677-.177L9.573.677A.25.25 0 0 1 10 .854V2.5h1A2.5 2.5 0 0 1 13.5 5v5.628a2.251 2.251 0 1 1-1.5 0V5a1 1 0 0 0-1-1h-1v1.646a.25.25 0 0 1-.427.177L7.177 3.427a.25.25 0 0 1 0-.354M3.75 2.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m0 9.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m8.25.75a.75.75 0 1 0 1.5 0a.75.75 0 0 0-1.5 0">
            </path>
          </svg>
          Proposals
        </a>
        <a href="/repo/9ee507fc4357d7ee16a5d8901bedcd103f23c17d/issues"
           class="tab"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 16 16"
               class="mb-1 mr-1 h-4 w-4 flex-none fill-base-content pt-1 opacity-50"
          >
            <path d="M8 9.5a1.5 1.5 0 1 0 0-3a1.5 1.5 0 0 0 0 3">
            </path>
            <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0M1.5 8a6.5 6.5 0 1 0 13 0a6.5 6.5 0 0 0-13 0">
            </path>
          </svg>
          Issues
        </a>
      </div>
      <div class="flex-grow">
      </div>
    </div>
  </div>
</div>
`;

exports[`Repo/Header No Name smoke-test 1`] = `
<div class="border-b border-accent-content bg-base-300">
  <div class="mx-auto lg:container">
    <a href="/repo/9ee507fc4357d7ee16a5d8901bedcd103f23c17d"
       class="strong btn btn-ghost mb-0 mt-0 break-words px-3 text-sm"
    >
      9ee507fc4357d7ee16a5d8901bedcd103f23c17d
    </a>
    <div class="flex border-b border-base-400">
      <div role="tablist"
           class="tabs tabs-bordered flex-none"
      >
        <a href="/repo/9ee507fc4357d7ee16a5d8901bedcd103f23c17d"
           class="tab tab-active"
        >
          About
        </a>
        <a href="/repo/9ee507fc4357d7ee16a5d8901bedcd103f23c17d/proposals"
           class="tab"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 16 16"
               class="mb-1 mr-1 h-4 w-4 flex-none fill-base-content pt-1 opacity-50"
          >
            <path d="M1.5 3.25a2.25 2.25 0 1 1 3 2.122v5.256a2.251 2.251 0 1 1-1.5 0V5.372A2.25 2.25 0 0 1 1.5 3.25m5.677-.177L9.573.677A.25.25 0 0 1 10 .854V2.5h1A2.5 2.5 0 0 1 13.5 5v5.628a2.251 2.251 0 1 1-1.5 0V5a1 1 0 0 0-1-1h-1v1.646a.25.25 0 0 1-.427.177L7.177 3.427a.25.25 0 0 1 0-.354M3.75 2.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m0 9.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m8.25.75a.75.75 0 1 0 1.5 0a.75.75 0 0 0-1.5 0">
            </path>
          </svg>
          Proposals
        </a>
        <a href="/repo/9ee507fc4357d7ee16a5d8901bedcd103f23c17d/issues"
           class="tab"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 16 16"
               class="mb-1 mr-1 h-4 w-4 flex-none fill-base-content pt-1 opacity-50"
          >
            <path d="M8 9.5a1.5 1.5 0 1 0 0-3a1.5 1.5 0 0 0 0 3">
            </path>
            <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0M1.5 8a6.5 6.5 0 1 0 13 0a6.5 6.5 0 0 0-13 0">
            </path>
          </svg>
          Issues
        </a>
      </div>
      <div class="flex-grow">
      </div>
    </div>
  </div>
</div>
`;

exports[`Repo/Header Short Name smoke-test 1`] = `
<div class="border-b border-accent-content bg-base-300">
  <div class="mx-auto lg:container">
    <a href="/repo/9ee507fc4357d7ee16a5d8901bedcd103f23c17d"
       class="strong btn btn-ghost mb-0 mt-0 break-words px-3 text-sm"
    >
      Short Name
    </a>
    <div class="flex border-b border-base-400">
      <div role="tablist"
           class="tabs tabs-bordered flex-none"
      >
        <a href="/repo/9ee507fc4357d7ee16a5d8901bedcd103f23c17d"
           class="tab tab-active"
        >
          About
        </a>
        <a href="/repo/9ee507fc4357d7ee16a5d8901bedcd103f23c17d/proposals"
           class="tab"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 16 16"
               class="mb-1 mr-1 h-4 w-4 flex-none fill-base-content pt-1 opacity-50"
          >
            <path d="M1.5 3.25a2.25 2.25 0 1 1 3 2.122v5.256a2.251 2.251 0 1 1-1.5 0V5.372A2.25 2.25 0 0 1 1.5 3.25m5.677-.177L9.573.677A.25.25 0 0 1 10 .854V2.5h1A2.5 2.5 0 0 1 13.5 5v5.628a2.251 2.251 0 1 1-1.5 0V5a1 1 0 0 0-1-1h-1v1.646a.25.25 0 0 1-.427.177L7.177 3.427a.25.25 0 0 1 0-.354M3.75 2.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m0 9.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m8.25.75a.75.75 0 1 0 1.5 0a.75.75 0 0 0-1.5 0">
            </path>
          </svg>
          Proposals
        </a>
        <a href="/repo/9ee507fc4357d7ee16a5d8901bedcd103f23c17d/issues"
           class="tab"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 16 16"
               class="mb-1 mr-1 h-4 w-4 flex-none fill-base-content pt-1 opacity-50"
          >
            <path d="M8 9.5a1.5 1.5 0 1 0 0-3a1.5 1.5 0 0 0 0 3">
            </path>
            <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0M1.5 8a6.5 6.5 0 1 0 13 0a6.5 6.5 0 0 0-13 0">
            </path>
          </svg>
          Issues
        </a>
      </div>
      <div class="flex-grow">
      </div>
    </div>
  </div>
</div>
`;

exports[`Repo/Header loading smoke-test 1`] = `
<div class="border-b border-accent-content bg-base-300">
  <div class="mx-auto lg:container">
    <div class="p-3">
      <div class="skeleton h-6 w-28 bg-base-200">
      </div>
    </div>
    <div class="flex border-b border-base-400">
      <div role="tablist"
           class="tabs tabs-bordered flex-none"
      >
        <a href="/repo/"
           class="tab tab-active"
        >
          About
        </a>
        <a href="/repo//proposals"
           class="tab"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 16 16"
               class="mb-1 mr-1 h-4 w-4 flex-none fill-base-content pt-1 opacity-50"
          >
            <path d="M1.5 3.25a2.25 2.25 0 1 1 3 2.122v5.256a2.251 2.251 0 1 1-1.5 0V5.372A2.25 2.25 0 0 1 1.5 3.25m5.677-.177L9.573.677A.25.25 0 0 1 10 .854V2.5h1A2.5 2.5 0 0 1 13.5 5v5.628a2.251 2.251 0 1 1-1.5 0V5a1 1 0 0 0-1-1h-1v1.646a.25.25 0 0 1-.427.177L7.177 3.427a.25.25 0 0 1 0-.354M3.75 2.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m0 9.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m8.25.75a.75.75 0 1 0 1.5 0a.75.75 0 0 0-1.5 0">
            </path>
          </svg>
          Proposals
        </a>
        <a href="/repo//issues"
           class="tab"
        >
          <svg xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 16 16"
               class="mb-1 mr-1 h-4 w-4 flex-none fill-base-content pt-1 opacity-50"
          >
            <path d="M8 9.5a1.5 1.5 0 1 0 0-3a1.5 1.5 0 0 0 0 3">
            </path>
            <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0M1.5 8a6.5 6.5 0 1 0 13 0a6.5 6.5 0 0 0-13 0">
            </path>
          </svg>
          Issues
        </a>
      </div>
      <div class="flex-grow">
      </div>
    </div>
  </div>
</div>
`;
